--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,6 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-      "no-underscore-dangle": ["error",{"allow":["_id"]}],
-      "max-len": ["error", { "code": 150 }]
+      "no-underscore-dangle": ["error",{"allow":["_id"]}]
     }
 }
