--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.6.0",
     "express-winston": "^4.2.0",
+    "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
     "validator": "^13.7.0",
@@ -38,6 +40,8 @@
     "eslint": "^8.25.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "nodemon": "^2.0.20"
+    "node-hot-loader": "^1.21.9",
+    "nodemon": "^2.0.20",
+    "webpack": "^5.74.0"
   }
 }
